--- a/src/MauiTemplatesCLI/MauiAppCS/AppShell.razor
+++ b/src/MauiTemplatesCLI/MauiAppCS/AppShell.razor
@@ -1,4 +1,4 @@
-﻿<Shell>
+﻿<Shell Title="MauiApp._1">
     @* Define Shell Flyout and Tab Items *@
     <ShellContent Title="Home">
         <MainPage />
