--- a/src/MauiTemplatesCLI/MauiAppCS/Resources/Colors.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Resources/Colors.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<!--#if (Net10OrLater)-->
+<!--#if (ImplicitNamespace)-->
+<ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<!--#elif (GlobalNamespace)-->
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/maui/global"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -18,6 +20,7 @@
 <!--#endif-->
 
     <Color x:Key="Primary">#512BD4</Color>
+    <Color x:Key="OnPrimary">White</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
     <Color x:Key="White">White</Color>
