--- a/src/MauiTemplatesCLI/MauiAppCS/Views/LoginPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Views/LoginPage.xaml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (Mvvm)-->
-<!--#if (Net10OrLater)-->
+<!--#if (ImplicitNamespace)-->
+<ContentPage
+    x:Class="MauiApp._1.Views.LoginPage"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Shell.NavBarIsVisible="False"
+    x:DataType="LoginViewModel">
+<!--#elif (GlobalNamespace)-->
 <ContentPage
     x:Class="MauiApp._1.Views.LoginPage"
     xmlns="http://schemas.microsoft.com/dotnet/maui/global"
@@ -42,7 +48,12 @@
     </ContentPage.Content>
 </ContentPage>
 <!--#else-->
-<!--#if (Net10OrLater)-->
+<!--#if (ImplicitNamespace)-->
+<ContentPage
+    x:Class="MauiApp._1.Views.LoginPage"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Shell.NavBarIsVisible="False">
+<!--#elif (GlobalNamespace)-->
 <ContentPage
     x:Class="MauiApp._1.Views.LoginPage"
     xmlns="http://schemas.microsoft.com/dotnet/maui/global"
